fix: Better ribbon on mobile

--- a/assets/zazuko/topbar.scss
+++ b/assets/zazuko/topbar.scss
@@ -30,6 +30,12 @@
       margin-right: 10px;
     }
 
+    @media screen and (max-width: $mq-s) {
+      img {
+        margin-right: 0;
+      }
+    }
+
     @media screen and (max-width: 400px) {
       text-align: center;
       width: 100%;
@@ -42,12 +48,44 @@
   }
 }
 
-.ribbon {
+.github-corner {
+  height: 100px;
+  display: block;
   position: absolute;
   top: 0;
   right: 0;
-  border: 0;
-  @media screen and (max-width: 480px) {
-    display: none;
+  overflow: hidden;
+  z-index: 2;
+
+  svg {
+    height: 120px;
+    width: 120px;
   }
+
+  &:hover .octo-arm {
+    animation:octocat-wave 560ms ease-in-out;
+  }
+
+  @media screen and (max-width: $mq-s) {
+    svg {
+      height: 90px;
+      width: 90px;
+    }
+
+    &:hover .octo-arm { animation: none; }
+    .octo-arm { animation:octocat-wave 560ms ease-in-out; }
+  }
+
+  @media screen and (max-width: 400px) {
+    svg {
+      height: 70px;
+      width: 70px;
+    }
+  }
+}
+
+@keyframes octocat-wave {
+  0%, 100% { transform:rotate(0); }
+  20%, 60% { transform:rotate(-25deg); }
+  40%, 80% { transform:rotate(10deg); }
 }
